updated width of the game and we created a gitignore updated some text

--- a/howtoplay.html
+++ b/howtoplay.html
@@ -4,6 +4,7 @@
     </head>
     <body>
 <a href="index.html">back to home</a>
-<h2>Use your mouse, arow keys or finger and drag ball boy and avod the bad guys.</h2>
+<h2>How to play</h2>
+<p>Use your mouse, arrow keys or finger and drag ball boy and avoid the bad guys.</p>
 </body>
 </html>
