--- a/specialthanks.html
+++ b/specialthanks.html
@@ -5,6 +5,6 @@
     <body>
 <a href="index.html">back to home</a>
 <h2>Speacial Thanks:</h2>
-<p>sarah, brandon, cole, gracie, matthew, and barret </p>
+<p>Sarah, Brandon, Cole, Gracie, Matthew, and Barret. </p>
 </body>
 </html>
