--- a/game.html
+++ b/game.html
@@ -5,6 +5,6 @@
     <body>
     <a href="index.html">back to home</a>
     <h2></h2>
-    <iframe src="https://scratch.mit.edu/projects/470167875/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe src="https://scratch.mit.edu/projects/470167875/embed" allowtransparency="true" width="100%" height="90%" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </body>
 </html>
