--- a/story.html
+++ b/story.html
@@ -6,7 +6,7 @@
 <a href="index.html">back to home</a>
 <h2>Story</h2>
 <p>
-    You are Ball Boy a failed good clone of the evil king. After you got
+    You are Ball Boy, a failed good clone of the evil king. After you got
     free, you teamed up with your brother Ball Bro and your girlfriend Ball Girl
     and stole the failed clone maker and made a bunch of clones of yourself.
     One named Big Ball broke the machine. When you rebuilt it, it
